Commiting the style sheet from html5up.net

--- a/PersonalWebsite/PersonalWebsite.csproj
+++ b/PersonalWebsite/PersonalWebsite.csproj
@@ -196,13 +196,44 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\font\fontawesome-webfont.svg" />
+    <Content Include="css\ie7.css" />
+    <Content Include="css\ie8.css" />
+    <Content Include="css\ie9.css" />
+    <Content Include="css\images\bg.png" />
+    <Content Include="css\images\ie9\button-active.svg" />
+    <Content Include="css\images\ie9\button-alt-active.svg" />
+    <Content Include="css\images\ie9\button-alt.svg" />
+    <Content Include="css\images\ie9\button.svg" />
+    <Content Include="css\images\ie9\social-li.svg" />
+    <Content Include="css\skel-noscript.css" />
+    <Content Include="css\style-1000px.css" />
+    <Content Include="css\style-desktop.css" />
+    <Content Include="css\style-mobile.css" />
+    <Content Include="css\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\me.jpg" />
+    <Content Include="images\portfolio01.jpg" />
+    <Content Include="images\portfolio02.jpg" />
+    <Content Include="images\portfolio03.jpg" />
+    <Content Include="images\portfolio04.jpg" />
+    <Content Include="images\portfolio05.jpg" />
+    <Content Include="images\portfolio06.jpg" />
+    <Content Include="js\config.js" />
+    <Content Include="js\html5shiv.js" />
+    <Content Include="js\jquery.min.js" />
+    <Content Include="js\skel.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config" />
+    <Content Include="css\font\fontawesome-webfont.eot" />
+    <Content Include="css\font\fontawesome-webfont.ttf" />
+    <Content Include="css\font\fontawesome-webfont.woff" />
+    <Content Include="css\font\FontAwesome.otf" />
+    <None Include="Properties\PublishProfiles\KshitijPortal.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
